--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "tsx src/server.ts",
     "start:watch": "tsx watch src/server.ts",
-    "build": "tsup src",
-    "test": "vitest"
+    "build": "tsup src"
   },
   "repository": {
     "type": "git",
@@ -22,9 +21,18 @@
   "homepage": "https://gitlab.com/hericke47/pebmed-api#readme",
   "devDependencies": {
     "@types/node": "20.3.2",
+    "@typescript-eslint/eslint-plugin": "5.60.1",
+    "@typescript-eslint/parser": "5.60.1",
+    "eslint": "8.43.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-import-resolver-typescript": "3.5.5",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-import-helpers": "1.3.1",
+    "eslint-plugin-prettier": "4.2.1",
+    "prettier": "2.8.8",
     "tsup": "7.1.0",
     "tsx": "3.12.7",
-    "typescript": "5.1.3",
-    "vitest": "0.32.2"
+    "typescript": "5.1.3"
   }
 }
