--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "tsx src/server.ts",
     "start:watch": "tsx watch src/server.ts",
-    "build": "tsup src"
+    "build": "tsup src",
+    "lint": "eslint . --ext .ts"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   },
   "homepage": "https://gitlab.com/hericke47/pebmed-api#readme",
   "devDependencies": {
+    "@types/express": "4.17.17",
     "@types/node": "20.3.2",
     "@typescript-eslint/eslint-plugin": "5.60.1",
     "@typescript-eslint/parser": "5.60.1",
@@ -34,5 +36,8 @@
     "tsup": "7.1.0",
     "tsx": "3.12.7",
     "typescript": "5.1.3"
+  },
+  "dependencies": {
+    "express": "4.18.2"
   }
 }
