feat: add route and migrations to create doctors

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,14 @@
-node_modules
-.vscode
-coverage
-.env
-dist
 package-lock.json
-build
+
+node_modules/
+.idea/
+build/
+temp/
+.env
+.vscode/
+ormconfig.json
+dist/
+
+coverage
+tmp/*
+!tmp/.gitkeep
