--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsx src/server.ts",
-    "start:watch": "tsx watch src/server.ts",
+    "start": "tsx src/shared/infra/http/server.ts",
+    "start:watch": "tsx watch src/shared/infra/http/server.ts",
     "build": "tsup src",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "typeorm:migration:create": "tsx ./node_modules/typeorm/cli migration:create -n",
+    "typeorm:migration:run": "tsx ./node_modules/typeorm/cli migration:run",
+    "typeorm:migration:revert": "tsx ./node_modules/typeorm/cli migration:revert"
   },
   "repository": {
     "type": "git",
@@ -21,8 +24,12 @@
   },
   "homepage": "https://gitlab.com/hericke47/pebmed-api#readme",
   "devDependencies": {
+    "@types/bcrypt": "5.0.0",
+    "@types/cors": "2.8.13",
     "@types/express": "4.17.17",
+    "@types/jsonwebtoken": "9.0.2",
     "@types/node": "20.3.2",
+    "@types/uuid": "9.0.2",
     "@typescript-eslint/eslint-plugin": "5.60.1",
     "@typescript-eslint/parser": "5.60.1",
     "eslint": "8.43.0",
@@ -30,7 +37,6 @@
     "eslint-config-prettier": "8.8.0",
     "eslint-import-resolver-typescript": "3.5.5",
     "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-import-helpers": "1.3.1",
     "eslint-plugin-prettier": "4.2.1",
     "prettier": "2.8.8",
     "tsup": "7.1.0",
@@ -38,6 +44,18 @@
     "typescript": "5.1.3"
   },
   "dependencies": {
-    "express": "4.18.2"
+    "bcrypt": "5.1.0",
+    "celebrate": "15.0.1",
+    "cors": "2.8.5",
+    "dayjs": "1.11.8",
+    "dotenv": "16.3.1",
+    "express": "4.18.2",
+    "express-async-errors": "3.1.1",
+    "jsonwebtoken": "9.0.0",
+    "pg": "8.11.1",
+    "reflect-metadata": "0.1.13",
+    "tsyringe": "4.8.0",
+    "typeorm": "0.2.45",
+    "uuid": "9.0.0"
   }
 }
