--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint . --ext .ts",
     "typeorm:migration:create": "tsx ./node_modules/typeorm/cli migration:create -n",
     "typeorm:migration:run": "tsx ./node_modules/typeorm/cli migration:run",
-    "typeorm:migration:revert": "tsx ./node_modules/typeorm/cli migration:revert"
+    "typeorm:migration:revert": "tsx ./node_modules/typeorm/cli migration:revert",
+    "test": "NODE_ENV=test jest --runInBand --detectOpenHandles"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
     "@types/bcrypt": "5.0.0",
     "@types/cors": "2.8.13",
     "@types/express": "4.17.17",
+    "@types/jest": "29.5.2",
     "@types/jsonwebtoken": "9.0.2",
     "@types/node": "20.3.2",
     "@types/uuid": "9.0.2",
@@ -38,12 +40,14 @@
     "eslint-import-resolver-typescript": "3.5.5",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-prettier": "4.2.1",
+    "jest": "29.5.0",
     "prettier": "2.8.8",
     "tsup": "7.1.0",
     "tsx": "3.12.7",
     "typescript": "5.1.3"
   },
   "dependencies": {
+    "@types/supertest": "2.0.12",
     "bcrypt": "5.1.0",
     "celebrate": "15.0.1",
     "cors": "2.8.5",
@@ -54,6 +58,9 @@
     "jsonwebtoken": "9.0.0",
     "pg": "8.11.1",
     "reflect-metadata": "0.1.13",
+    "supertest": "6.3.3",
+    "ts-jest": "29.1.0",
+    "ts-node": "10.9.1",
     "tsyringe": "4.8.0",
     "typeorm": "0.2.45",
     "uuid": "9.0.0"
