--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/jest": "29.5.2",
     "@types/jsonwebtoken": "9.0.2",
     "@types/node": "20.3.2",
+    "@types/swagger-ui-express": "4.1.3",
     "@types/uuid": "9.0.2",
     "@typescript-eslint/eslint-plugin": "5.60.1",
     "@typescript-eslint/parser": "5.60.1",
@@ -59,6 +60,7 @@
     "pg": "8.11.1",
     "reflect-metadata": "0.1.13",
     "supertest": "6.3.3",
+    "swagger-ui-express": "4.6.3",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
     "tsyringe": "4.8.0",
