feat: add route to authenticate doctor and generate token/refresh token

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,19 @@
-# Database Test
-NODE_ENV=
+NODE_ENV=dev
 
+# JWT
+SECRET_TOKEN=secrettoken
+SECRET_REFRESH_TOKEN=secretrefreshtoken
+
+# Database
 POSTGRES_HOST=localhost
 POSTGRES_USER=pebmed_postgres
 POSTGRES_PASS=264462
 POSTGRES_DB=pebmed_postgres
 POSTGRES_PORT=5432
+
+# Database Test
+POSTGRES_HOST_TEST=localhost
+POSTGRES_USER_TEST=pebmed_postgres
+POSTGRES_PASS_TEST=264462
+POSTGRES_DB_TEST=pebmed_postgres
+POSTGRES_PORT_TEST=5432
