feat/chore: change snake_case to camelCase and create refresh doctor token use case

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,7 @@
     "prettier"
   ],
   "rules": {
-    "camelcase": "off",
+    "camelcase": "error",
     "import/no-unresolved": "off",
     "@typescript-eslint/naming-convention": [
       "error",
