--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "tsx src/shared/infra/http/server.ts",
     "start:watch": "tsx watch src/shared/infra/http/server.ts",
-    "build": "tsup src",
+    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
     "lint": "eslint . --ext .ts",
     "typeorm:migration:create": "tsx ./node_modules/typeorm/cli migration:create -n",
     "typeorm:migration:run": "tsx ./node_modules/typeorm/cli migration:run",
@@ -25,6 +25,15 @@
   },
   "homepage": "https://gitlab.com/hericke47/pebmed-api#readme",
   "devDependencies": {
+    "@babel/cli": "^7.13.14",
+    "@babel/core": "^7.13.15",
+    "@babel/node": "^7.13.13",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-decorators": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-typescript": "^7.13.0",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "@types/bcrypt": "5.0.0",
     "@types/cors": "2.8.13",
     "@types/express": "4.17.17",
