--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
   },
   "homepage": "https://gitlab.com/hericke47/pebmed-api#readme",
   "devDependencies": {
-    "@babel/cli": "^7.13.14",
-    "@babel/core": "^7.13.15",
-    "@babel/node": "^7.13.13",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/plugin-proposal-decorators": "^7.13.15",
-    "@babel/preset-env": "^7.13.15",
-    "@babel/preset-typescript": "^7.13.0",
+    "@babel/cli": "7.13.14",
+    "@babel/core": "7.13.15",
+    "@babel/node": "7.13.13",
+    "@babel/plugin-proposal-class-properties": "7.13.0",
+    "@babel/plugin-proposal-decorators": "7.13.15",
+    "@babel/preset-env": "7.13.15",
+    "@babel/preset-typescript": "7.13.0",
     "@types/bcrypt": "5.0.0",
     "@types/cors": "2.8.13",
     "@types/express": "4.17.17",
@@ -42,7 +42,7 @@
     "@types/uuid": "9.0.2",
     "@typescript-eslint/eslint-plugin": "5.60.1",
     "@typescript-eslint/parser": "5.60.1",
-    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-module-resolver": "4.1.0",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "eslint": "8.43.0",
     "eslint-config-airbnb-base": "15.0.0",
