--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -59,7 +59,8 @@
     ],
     "prettier/prettier": [
       "error"
-    ]
+    ],
+    "no-param-reassign": "off"
   },
   "settings": {
     "import/resolver": {
