--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "typeorm:migration:create": "tsx ./node_modules/typeorm/cli migration:create -n",
     "typeorm:migration:run": "tsx ./node_modules/typeorm/cli migration:run",
     "typeorm:migration:revert": "tsx ./node_modules/typeorm/cli migration:revert",
-    "test": "NODE_ENV=test jest --runInBand --detectOpenHandles --collect-coverage",
-    "prepare": "husky install"
+    "test": "NODE_ENV=test jest --runInBand --detectOpenHandles --collect-coverage"
   },
   "repository": {
     "type": "git",
@@ -51,7 +50,6 @@
     "eslint-import-resolver-typescript": "3.5.5",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-prettier": "4.2.1",
-    "husky": "8.0.3",
     "jest": "29.5.0",
     "prettier": "2.8.8",
     "tsx": "3.12.7",
