--- a/.env.example
+++ b/.env.example
@@ -6,16 +6,16 @@ SECRET_REFRESH_TOKEN=secretrefreshtoken
 
 # Database
 POSTGRES_HOST=localhost
-POSTGRES_USER=pebmed_postgres
+POSTGRES_USER=med_postgres
 POSTGRES_PASS=264462
-POSTGRES_DB=pebmed_postgres
+POSTGRES_DB=med_postgres
 POSTGRES_PORT=5432
 
 # Database Test
-# localhost para rodar local ou pebmed-postgres-test para rodar via docker
+# localhost para rodar local ou med-postgres-test para rodar via docker
 POSTGRES_HOST_TEST=localhost
 
-POSTGRES_USER_TEST=pebmed_postgres_test
+POSTGRES_USER_TEST=med_postgres_test
 POSTGRES_PASS_TEST=264462
-POSTGRES_DB_TEST=pebmed_postgres_test
+POSTGRES_DB_TEST=med_postgres_test
 POSTGRES_PORT_TEST=5433
